--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_svg: ^2.1.0
   flutter_floating_bottom_bar: ^1.3.0
   provider: ^6.1.5
+  lucide_icons: ^0.257.0
+  lite_rolling_switch: ^1.0.1
 
 dev_dependencies:
   flutter_test:
