--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   provider: ^6.1.5
   lucide_icons: ^0.257.0
   lite_rolling_switch: ^1.0.1
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
